# Kokkos-quantization

./: .gitignore  CMakeLists.txt  README.md  algorithm.sh  results.csv  results_java.csv  results_old.csv  standard.md
schematics/: test.schematic
src/: main.cpp
src/algorithm/: algorithm.cpp  algorithm.h  voxelization.cpp  voxelization.h
src/clean/: clean.cpp  clean.h
src/components/: Face.cpp  Face.h  Location.cpp  Location.h  TempFace.cpp  TempFace.h  Voxel.cpp  Voxel.h
src/execution/: execution.cpp  execution.h
src/kokkos/: kokkos_clean.cpp  kokkos_clean.h  task_execution_example.cpp  task_execution_example.h
src/utils/: Face.cpp  Face.h  FileMaker.cpp  FileMaker.h  ObjectStore.cpp  ObjectStore.h  TempFace.cpp  TempFace.h  VerticesStore.cpp  VerticesStore.h  VoxelStore.cpp  VoxelStore.h  fileMaker.cpp  fileMaker.h
